--- a/삭제할거/로그인/css/login.css
+++ b/삭제할거/로그인/css/login.css
@@ -24,6 +24,7 @@
             /* border:1px solid; */
             width:400px;
             /* margin:0 auto; */
+            margin-top:70px;
         }
         .imagebox>img {
             text-align: center;
@@ -36,7 +37,7 @@
             width:100%;
             height:210px;
             text-align: center;
-            padding:50px;
+            padding:100px;
         }
         .logobox>img{
             height:150px;
@@ -54,10 +55,12 @@
             width:100%;
             margin-top: 5px;
             border-radius: 10px;
+            border:1px solid rgba(128,128,128,.2);
+            
             
         }
         .inputbox>button {
-            background-color: rgb(52,191,153);
+            background-color: rgba(169, 19, 146,0.2);
             width:100%;
             height:40px;
             border:none;
@@ -66,6 +69,7 @@
             border-radius: 10px;
             cursor:pointer;
             font-weight: bold;
+            color:#444;
 
         }
         .divider {
