--- a/삭제할거/회원가입/css/join.css
+++ b/삭제할거/회원가입/css/join.css
@@ -10,6 +10,7 @@
             height: 100vh;
             margin: 0;
             font-family: 'Arial', sans-serif;
+            /* color:rgb(253,250,245) */
         }
 
         .container {
@@ -23,7 +24,7 @@
 
         .logo {
             /* font-family: 'Brush Script MT', cursive; */
-            color: rgb(62, 233, 188);
+            color: rgb(171,23,179);
             font-weight: 700;
             font-size: 50px;
             margin-bottom: 10px;
